objects/ProductTransfer.object
<CustomObject>
    <fields>
        <fullName>Customer_Inventory__c</fullName>
        <formula>IF(
ISPICKVAL(SourceLocation.Inventory_Type__c, &quot;Customer Inventory&quot;),
SourceLocation.Inventory_Owner__r.Name,
&quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer&apos;s Inventory</inlineHelpText>
        <label>Customer Inventory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Transfers (Manufacturer)</relationshipLabel>
        <relationshipName>Product_Transfers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>AcctSeedERP__Purchase_Order__c</referenceTo>
        <relationshipLabel>Product Transfers</relationshipLabel>
        <relationshipName>Product_Transfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Requested__c</fullName>
        <formula>ProductRequestLineItem.QuantityRequested</formula>
        <label>Quantity Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Returned__c</fullName>
        <formula>ReturnOrderLineItem.QuantityReturned</formula>
        <label>Quantity Returned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Replacement__c</fullName>
        <formula>ISPICKVAL(ProductRequestLineItem.Parent.Request_Replacement__c, &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replacement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Select_Transfer__c</fullName>
        <formula>ProductTransferNumber + &quot; - &quot; + Product2.Name + &quot; - &quot; + TEXT(QuantitySent)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Select Transfer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Email__c</fullName>
        <label>Ship To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ship_To_ID__c</fullName>
        <formula>ProductRequestLineItem.Parent.Ship_to_User__c</formula>
        <label>Ship To ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State__c</fullName>
        <label>Ship To State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Street__c</fullName>
        <label>Ship To Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Zip__c</fullName>
        <label>Ship To Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <inlineHelpText>If &quot;Other&quot;, enter Address below</inlineHelpText>
        <label>Ship To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Location Address</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Company__c</fullName>
        <label>Shipping Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Cost__c</fullName>
        <label>Shipping Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Single_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables Individual Transfer Alerts</inlineHelpText>
        <label>Single Transfer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Inventory_Type__c</fullName>
        <formula>TEXT(SourceProductItem.Location.Inventory_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Inventory Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_URL__c</fullName>
        <label>Tracking URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Transfer_Parent__c</fullName>
        <formula>IF(
NOT(ISBLANK(ProductRequestLineItemId)),
&quot;Request&quot;,
IF(
AND(
ISBLANK(ProductRequestLineItemId),
NOT(ISBLANK(ReturnOrderLineItemId))), 
&quot;Return&quot;,
NULL
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transfer Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_Type__c</fullName>
        <label>Transfer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Vendor Inbound</fullName>
                </value>
                <value>
                    <fullName>Vendor Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used_Customer_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used Customer Inventory?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_PO_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor PO Line</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeedERP__Purchase_Order_Line__c.AcctSeedERP__Purchase_Order__r.AcctSeedERP__Vendor__c</field>
                <operation>equals</operation>
                <valueField>$Source.Vendor__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeedERP__Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>Product Transfers</relationshipLabel>
        <relationshipName>Product_Transfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendor- Material, Vendor- Corporate, Vendor- Subcontractor/Non-Material</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Transfers</relationshipLabel>
        <relationshipName>Product_Transfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>View_Customer_Inventory__c</fullName>
        <formula>Customer_Inventory__c + &quot; - &quot; + Product2.Name + &quot; - Qty - &quot; + TEXT(QuantityReceived)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Customer Inventory</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Internal_Transfers</fullName>
        <columns>Name</columns>
        <columns>ProductRequestLineItem</columns>
        <columns>Product2</columns>
        <columns>SourceLocation</columns>
        <columns>DestinationLocation</columns>
        <columns>ShipmentExpectedDeliveryDate</columns>
        <columns>QuantitySent</columns>
        <columns>LastModifiedDate</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>En Route</value>
        </filters>
        <filters>
            <field>Transfer_Type__c</field>
            <operation>equals</operation>
            <value>Internal</value>
        </filters>
        <label>All Internal Transfers</label>
        <language>en_US</language>
        <sharedTo>
            <group>Inventory_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_ProductTransfers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Product Transfers</label>
    </listViews>
    <listViews>
        <fullName>All_ProductTransfers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Product Transfers</label>
    </listViews>
    <listViews>
        <fullName>All_Vendor_Inbound_Transfers</fullName>
        <columns>Name</columns>
        <columns>ProductRequestLineItem</columns>
        <columns>Product2</columns>
        <columns>Vendor__c</columns>
        <columns>DestinationLocation</columns>
        <columns>ShipmentExpectedDeliveryDate</columns>
        <columns>QuantitySent</columns>
        <columns>LastModifiedDate</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>En Route</value>
        </filters>
        <filters>
            <field>Transfer_Type__c</field>
            <operation>equals</operation>
            <value>Vendor Inbound</value>
        </filters>
        <label>All Vendor Inbound Transfers</label>
        <language>en_US</language>
        <sharedTo>
            <group>Inventory_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Vendor_Outbound_Transfers</fullName>
        <columns>Name</columns>
        <columns>ProductRequestLineItem</columns>
        <columns>Product2</columns>
        <columns>Vendor__c</columns>
        <columns>SourceLocation</columns>
        <columns>ShipmentExpectedDeliveryDate</columns>
        <columns>QuantitySent</columns>
        <columns>LastModifiedDate</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>En Route</value>
        </filters>
        <filters>
            <field>Transfer_Type__c</field>
            <operation>equals</operation>
            <value>Vendor Outbound</value>
        </filters>
        <label>All Vendor Outbound Transfers</label>
        <language>en_US</language>
        <sharedTo>
            <group>Inventory_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_En_Route_Transfers</fullName>
        <columns>Name</columns>
        <columns>Vendor__c</columns>
        <columns>Product2</columns>
        <columns>Tracking_Number__c</columns>
        <columns>QuantitySent</columns>
        <columns>QuantityReceived</columns>
        <columns>IsReceived</columns>
        <columns>ReceivedBy</columns>
        <columns>LastModifiedDate</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>En Route</value>
        </filters>
        <label>My En Route Transfers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_ProductTransfers</fullName>
        <filterScope>Mine</filterScope>
        <label>My Product Transfers</label>
    </listViews>
    <listViews>
        <fullName>My_ProductTransfers</fullName>
        <columns>Name</columns>
        <columns>IsReceived</columns>
        <columns>QuantityReceived</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <columns>ProductRequestLineItem</columns>
        <columns>SourceProductItem</columns>
        <columns>Product2</columns>
        <columns>SourceLocation</columns>
        <columns>DestinationLocation</columns>
        <columns>Shipment</columns>
        <columns>ReturnOrderLineItem</columns>
        <filterScope>Mine</filterScope>
        <label>My Product Transfers</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Internal_Transfer</fullName>
        <active>true</active>
        <description>Borrego Managed Inventory Internal Transfers</description>
        <label>Internal Transfer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor_Inbound_Transfer</fullName>
        <active>true</active>
        <description>Vendor Purchases Inbound to Borrego</description>
        <label>Vendor Inbound Transfer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor_Outbound_Transfer</fullName>
        <active>true</active>
        <description>Vendor Purchases Outbound to Vendor</description>
        <label>Vendor Outbound Transfer</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>